tentative d'utilisation de @Aspect

--- a/org.xtext.example.mydsl/xtend-gen/org/xtext/example/mydsl/generator/.gitignore
+++ b/org.xtext.example.mydsl/xtend-gen/org/xtext/example/mydsl/generator/.gitignore
@@ -1,3 +1,6 @@
 /.MyDslGenerator.java._trace
 /.MyDslGenerator.xtendbin
 /MyDslGenerator.java
+/.StateAspect.java._trace
+/.StateMachineAspect.java._trace
+/.TransitionAspect.java._trace
