--- a/org.xtext.example.mydsl/xtend-gen/org/xtext/example/mydsl/interpreter/.gitignore
+++ b/org.xtext.example.mydsl/xtend-gen/org/xtext/example/mydsl/interpreter/.gitignore
@@ -1,3 +1,7 @@
 /.MyDslAspectInterpreter.java._trace
 /.MyAspectInterpreter.java._trace
 /.AspectInterpreter.java._trace
+/.AspectInterpreter.xtendbin
+/AspectInterpreter.java
+/.StateAspect.java._trace
+/.TransitionAspect.java._trace
